--- a/table.html
+++ b/table.html
@@ -73,7 +73,7 @@
     <script>
         $(document).ready(function () {
             $(".table-wrap td").click(function () {
-                url = "index.html";
+                url = "scatterplot.html";
                 $(location).attr("href", url);
             });
         });
