--- a/table.html
+++ b/table.html
@@ -66,7 +66,9 @@
         }
 
         .table-wrap td:hover {
+            transition: all .3s ease-in-out;
             transform: skew(-10deg);
+            transit
         }
 
     </style>
