--- a/scatterplot.html
+++ b/scatterplot.html
@@ -3,162 +3,96 @@
 <meta charset="utf-8">
 
 <style>
-body {
-  font: 11px sans-serif;
-}
+  body {
+    font: 11px sans-serif;
+  }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
 
-.dot {
-  stroke: #000;
-}
+  .dot {
+    stroke: #000;
+  }
 
-.tooltip {
-  position: absolute;
-  width: 200px;
-  height: 28px;
-  pointer-events: none;
-}
+  .tooltip {
+    position: absolute;
+    width: 200px;
+    height: 28px;
+    pointer-events: none;
+  }
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-<script>
-var margin = {top: 20, right: 20, bottom: 20, left: 20},
-    width = 500 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-/* 
- * value accessor - returns the value to encode for a given data object.
- * scale - maps value to a visual display encoding, such as a pixel position.
- * map function - maps from data value to display value
- * axis - sets up axis
- */ 
-
-// setup x 
-var xValue = function(d) { return d.arbeitslosenquote;}, // data -> value
-    xScale = d3.scale.linear().range([0, width]), // value -> display
-    xMap = function(d) { return xScale(xValue(d));}, // data -> display
-    xAxis = d3.svg.axis().scale(xScale).orient("bottom");
-
-// setup y
-var yValue = function(d) { return d.wohnungspreis;}, // data -> value
-    yScale = d3.scale.linear().range([height, 0]), // value -> display
-    yMap = function(d) { return yScale(yValue(d));}, // data -> display
-    yAxis = d3.svg.axis().scale(yScale).orient("left");
-
-// setup fill color
-var cValue = function(d) { return 1;},
-    color = d3.scale.category10();
-
-// add the graph canvas to the body of the webpage
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-// add the tooltip area to the webpage
-var tooltip = d3.select("body").append("div")
-    .attr("class", "tooltip")
-    .style("opacity", 0);
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
-var data = [
-{area: "Schwabing", arbeitslosenquote: 0.03, wohnungspreis: 30},
-{area: "Lehel", arbeitslosenquote: 0.05, wohnungspreis: 50},
-{area: "Maxvorstadt", arbeitslosenquote: 0.02, wohnungspreis: 60},
-{area: "Giesing", arbeitslosenquote: 0.01, wohnungspreis: 40},
-{area: "Bogenhausen", arbeitslosenquote: 0.07, wohnungspreis: 37},
-{area: "Pasing", arbeitslosenquote: 0.10, wohnungspreis: 21},
-{area: "Sendling", arbeitslosenquote: 0.10, wohnungspreis: 45},
-{area: "Obermenzing", arbeitslosenquote: 0.07, wohnungspreis: 29},
-{area: "Nymphenburg", arbeitslosenquote: 0.08, wohnungspreis: 67},
-{area: "Neuperlach", arbeitslosenquote: 0.06, wohnungspreis: 18},
-{area: "Freimann", arbeitslosenquote: 0.03, wohnungspreis: 26}
 
-]
+  <div id="scatterplot" style="float:left;"></div>
 
+  <div class="dropdown" style="float:left;">
+    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+      Filter
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          Alle
+        </label>
+      </div></li>
+      <li role="separator" class="divider"></li>
+      <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          2000
+        </label>
+      </div></li>
+      <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          2001
+        </label>
+      </div></li>
+      <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          2002
+        </label>
+      </div></li>
+      <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          2003
+        </label>
+      </div></li>
+      <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          2004
+        </label>
+      </div></li>
+      <li><div class="checkbox">
+        <label>
+          <input type="checkbox" value="">
+          2005
+        </label>
+      </div></li>
+    </ul>
+  </div>
 
-  // don't want dots overlapping axis, so add in buffer to data domain
-  xScale.domain([0, d3.max(data, xValue)+0.05]);
-  yScale.domain([0, d3.max(data, yValue)+30]);
-
-  // x-axis
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("x", width)
-      .attr("y", -6)
-      .style("text-anchor", "end")
-      .text("Arbeitslosenquote");
-
-  // y-axis
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Wohnungspreis in €/qm");
-
-  // draw dots
-  svg.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", 3.5)
-      .attr("cx", xMap)
-      .attr("cy", yMap)
-      .style("fill", function(d) { return color(cValue(d));}) 
-      .on("mouseover", function(d) {
-          tooltip.transition()
-               .duration(200)
-               .style("opacity", .9);
-          tooltip.html(d.area + "<br/> (" + xValue(d) 
-          + ", " + yValue(d) + ")")
-               .style("left", (d3.event.pageX + 5) + "px")
-               .style("top", (d3.event.pageY - 28) + "px");
-      })
-      .on("mouseout", function(d) {
-          tooltip.transition()
-               .duration(500)
-               .style("opacity", 0);
-      });
-
-  // draw legend
-  var legend = svg.selectAll(".legend")
-      .data(color.domain())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-
-  // draw legend colored rectangles
-  legend.append("rect")
-      .attr("x", width - 18)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
-
-  // draw legend text
-  legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 9)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d;})
-
-</script>
+  <script src="scripts/scatterplot.js"></script>
 </body>
 </html>
