--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
 	</style>
 </head>
-
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 <body>
 	
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 
 <script>
 
