--- a/scatterplot.html
+++ b/scatterplot.html
@@ -23,15 +23,14 @@
 
     function updateX(i){
       updateScatterplot(i, yIndex);
-      $("#dropdownMenuXData .dropdownLabel").html(names[i])
     }
 
     function updateY(i){
       updateScatterplot(xIndex, i);
-      $("#dropdownMenuYData .dropdownLabel").html(names[i])
     }
   </script>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <style>
   body {
@@ -67,7 +66,7 @@
       fill: none;
     }
     
-    .y.axis path{
+    #corrmat .y.axis path{
       fill: none;
       stroke: none;
     }
