--- a/scatterplot.html
+++ b/scatterplot.html
@@ -92,37 +92,37 @@
       <li role="separator" class="divider"></li>
       <li><div class="checkbox">
         <label>
-          <input type="checkbox" value="">
+          <input type="checkbox" value="2000">
           2000
         </label>
       </div></li>
       <li><div class="checkbox">
         <label>
-          <input type="checkbox" value="">
+          <input type="checkbox" value="2001">
           2001
         </label>
       </div></li>
       <li><div class="checkbox">
         <label>
-          <input type="checkbox" value="">
+          <input type="checkbox" value="2002">
           2002
         </label>
       </div></li>
       <li><div class="checkbox">
         <label>
-          <input type="checkbox" value="">
+          <input type="checkbox" value="2003">
           2003
         </label>
       </div></li>
       <li><div class="checkbox">
         <label>
-          <input type="checkbox" value="">
+          <input type="checkbox" value="2004">
           2004
         </label>
       </div></li>
       <li><div class="checkbox">
         <label>
-          <input type="checkbox" value="">
+          <input type="checkbox" value="2005">
           2005
         </label>
       </div></li>
