--- a/scatterplot.html
+++ b/scatterplot.html
@@ -105,7 +105,7 @@
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       <ul id="filterboxes" class="list-group">
                 <li class="list-group-item"><a onclick="checkAll(this.checked)">Alle</a></li>
             </ul>
